[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
# requires = ["flit_core >=3.2,<4"]
# build-backend = "flit_core.buildapi"

[project]
name = "tsp"
version = "0.0.1"
description = "A short description of the project."
# authors = [
#   { name = "" },
# ]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["tsp"]
# force-sort-within-sections = true
