[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
# requires = ["flit_core >=3.2,<4"]
# build-backend = "flit_core.buildapi"

[project]
name = "tsp"
version = "0.0.1"
description = "A short description of the project."
# authors = [
#   { name = "" },
# ]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "rich>=13.9.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "typer>=0.12.5",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["tsp"]
# force-sort-within-sections = true

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    # E402 	module-import-not-at-top-of-file
    "E402",
    # docstrings
    "D400", "D401", "D404", "D406", "D407", "D408", "D409", "D413"
]
